--- a/index.html
+++ b/index.html
@@ -39,21 +39,7 @@
     <nav class="main-nav">
         <div class="nav-left">
             <div class="coat-of-arms">
-                <div class="arms-shield">
-                    <div class="arms-upper">
-                        <div class="arms-lions">
-                            <div class="lion left"></div>
-                            <div class="lion right"></div>
-                            <div class="central-crown"></div>
-                        </div>
-                    </div>
-                    <div class="arms-lower">
-                        <div class="mountains"></div>
-                        <div class="water-lines"></div>
-                    </div>
-                </div>
-                <div class="arms-crown"></div>
-                <div class="arms-motto">ДРЕВЕН И ВЕЧЕН</div>
+                <img src="Plovdiv-coat-of-arms-with-slogan.svg.png" alt="Герб на Пловдив" class="coat-of-arms-img">
             </div>
             <div class="municipality-info">
                 <div class="country">РЕПУБЛИКА БЪЛГАРИЯ</div>
@@ -71,6 +57,8 @@
             <a href="#" class="nav-link">ТУРИЗЪМ</a>
             <span class="nav-separator">|</span>
             <a href="#" class="nav-link">КОНТАКТИ</a>
+            <span class="nav-separator">|</span>
+            <a href="kais.html" class="nav-link">КАИС</a>
         </div>
         <div class="nav-right">
             <div class="user-actions">
